--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 
 	<dependencies>
 		<dependency>
+		  <groupId>org.slf4j</groupId>
+		  <artifactId>slf4j-api</artifactId>
+		  <version>2.0.17</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.9.0</version>
