Update contact email

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 	  <developer>
 	    <id>pissedoffcitizen</id>
 	    <name>PissedOffCitizen</name>
-	    <email>admin@hextechstudios.net</email>
+	    <email>contact@poliscore.us</email>
 	    <url>https://poliscore.us</url>
 	    <roles><role>developer</role></roles>
 	  </developer>
